--- a/iOS_MVVM_starter/Views/Base.lproj/Main.storyboard
+++ b/iOS_MVVM_starter/Views/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Post Table View Controller-->
         <scene sceneID="Ro3-A8-Qia">
             <objects>
-                <tableViewController id="XQN-Sr-LRX" sceneMemberID="viewController">
+                <tableViewController id="XQN-Sr-LRX" customClass="PostTableViewController" customModule="iOS_MVVM_starter" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="F4R-Xf-o8B">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
